tests/src/frontend/typechecking/invalid/same_tparams_10.sk
fun no<T: mutable Ref<Int>>(x: T): mutable Ref<Int> {
  freeze(x)
}
